# scrape-flights

./: .gitignore  README.md  data.json  pyproject.toml  test.py
.github/workflows/: keepalive.yml
app/: main.py  utils.py
