[project]
name = "scrape-flights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fast-flights>=2.2",
    "fastapi>=0.128.0",
    "ipython>=9.9.0",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.40.0",
    "webdriver-manager>=4.0.2",
]
